syntax = "proto3";

package proto;

service Auth {
    rpc IsAuthenticated (AuthRequest) returns (AuthResponse) {}
}

message AuthRequest {
    string token = 1;
}

message AuthResponse {
    bool authenticated = 1;
}